fix: minor fix for form not aligning correctly

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -679,7 +679,8 @@ html, body {
 
 .scanplan-form {
   max-width: 600px;
-  margin: 0 auto;
+  margin: 0 auto;    
+  padding-right: 10px;
 }
 
 .scanplan-input {
